src/styles/global.css
@import "./hamburger.css";
@import "./gradient.css";
/* ./src/styles/global.css */

@font-face {
  font-family: NeueHaas;
  src: url(../static/fonts/NeueHaasVariableV1.2.ttf);
}

html {
  scroll-behavior: smooth;
  font-family: "NeueHaas";
  font-weight: normal;
  letter-spacing: 1px;
}

* {
  font-weight: 400 !important;
}

body {
  margin: 0;
  padding: 0;
  overflow: hidden;

  background-color: black;
  color: white;
}

.text-interactive {
  font-family: "NeueHaas";
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 1em;
  letter-spacing: 0.05em;
  text-transform: uppercase;
}

.ruler {
  display: block;
  border-top: 1px solid #fff;
  height: 0rem;
  width: 100%;
  margin-top: 0.5em;
}

.hanging-punctuation {
  text-indent: -0.3em;
}

.outer-scroll-container {
  height: 100vh;
  overflow-y: hidden;
  overscroll-behavior-x: none;
  overscroll-behavior-y: none;
  scrollbar-width: none;
}
::-webkit-scrollbar {
  display: none;
}

.inner-scroll-container {
  height: 100%;
}

.scroll-item {
  min-width: 100vw !important;
  width: 100vw;
  scroll-snap-align: center;
  height: 100%;
  background-repeat: no-repeat;
  background-position-x: center;
  background-position-y: bottom;
}

/* NAV BAR */
.site-logo {
  margin-top: -2;
  width: 124px;
}

@media only screen and (min-width: 1024px) {
  .site-logo {
    margin-top: -2;
    width: 184px;
  }
}

/* SPEAKERS */

.scroll-speaker1 {
  background-image: url("../static/images/speakers/speaker1.png");
  background-size: 95vh;
}

.scroll-speaker2 {
  background-image: url("../static/images/speakers/speaker2.png");
  background-size: 70vh;
}

.scroll-speaker3 {
  background-image: url("../static/images/speakers/speaker3.png");
  background-size: 80vh;
}

.scroll-speaker4 {
  background-image: url("../static/images/speakers/speaker4.png");
  background-size: 80vh;
}

.panel-active {
  border-top: 1px solid #e61b2e;
}

.panel-notactive {
  border-top: 1px solid transparent;
}

.panel-speaker1 {
  background: url("../static/images/speakers/speaker1.png") center no-repeat;
  background-size: 150%;
}

.panel-speaker2 {
  background: url("../static/images/speakers/speaker2.png") center no-repeat;
  background-size: 110%;
}

.panel-speaker3 {
  background: url("../static/images/speakers/speaker3.png") center no-repeat;
  background-size: 150%;
}

.panel-speaker4 {
  background: url("../static/images/speakers/speaker4.png") center no-repeat;
  background-size: 150%;
}

.one-px {
  width: 1px;
}

.glass-container {
  background: url("../static/images/speakers/speaker4.png");
  background-position: center;
  border-radius: none;
}

.glass {
  backdrop-filter: blur(15px);
  /* background: green; */
}

/* mobile */

.mobile-speaker-container {
  scrollbar-width: none;
}

.mobile-panel-spacer {
  min-width: calc(50vw - 31px);
}

.speaker-mobile-panel {
  min-width: 72px;
}

.mobile-speaker1 {
  background: url("../static/images/speakers/speaker1.png") center no-repeat;
  background-size: 200%;
}

.mobile-speaker2 {
  background: url("../static/images/speakers/speaker2.png") center no-repeat;
  background-size: 150%;
}

.mobile-speaker3 {
  background: url("../static/images/speakers/speaker3.png") center no-repeat;
  background-size: 200%;
}

.mobile-speaker4 {
  background: url("../static/images/speakers/speaker4.png") center no-repeat;
  background-size: 200%;
}

/* TEAMS */

.team-scroll {
  /* min-width: 70vw !important; */
  /* width: 100vw; */
  height: 100%;
}

.team-nav-container {
  top: 18%;
  width: 100%;
}

.team-panel-active {
  color: white;
  border-top: 1px solid #e61b2e;
  margin: 0 20px 0 0;
}

.team-panel-notactive {
  color: #949494;
  border-top: 1px solid transparent;
  margin: 0 20px 0 0;
}

.team-image {
  /* make the image resize base on the ratio */
  /* max-width: none !important; */
  min-width: 320px;
  /* width: 80vw; */
}

.team-nav-overflow {
  scrollbar-width: none;
  /* width: calc(100vw - 32px); */
}
/* TEAM BIOS */

.bio-container {
  min-width: 700px;
}

.bio-container-wide {
  min-width: 500px;
}

.teambio-img {
  max-height: 450px;
  max-width: 500px;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

/* utilities for adjusting font weight adjustments in variable fonts */
/* https://github.com/tailwindlabs/tailwindcss/discussions/3225 */
@layer utilities {
  .font-thin {
    font-variation-settings: "wght" 100;
  }
  .font-extralight {
    font-variation-settings: "wght" 200;
  }
  .font-light {
    font-variation-settings: "wght" 300;
  }
  .font-normal {
    font-variation-settings: "wght" 400;
  }
  .font-medium {
    font-variation-settings: "wght" 500;
  }
  .font-semibold {
    font-variation-settings: "wght" 600;
  }
  .font-bold {
    font-variation-settings: "wght" 700;
  }
  .font-extrabold {
    font-variation-settings: "wght" 800;
  }
  .font-black {
    font-variation-settings: "wght" 900;
  }
}

/* responsive content flow lines(the grid line where content being line) */
@layer utilities {
  @variants responsive {
    .mt-flowline-sm {
      margin-top: 6rem;
    }
    .mt-flowline {
      margin-top: 25vh;
    }
    .pt-flowline-sm {
      padding-top: 6rem;
    }
    .pt-flowline {
      padding-top: 25vh;
    }
  }
}

/* Margin size of the page */
@layer utilities {
  :root {
    --mobile-margin-horizontal: 20px;
    --mobile-margin-vertical: 20px;
    --desktop-margin-horizontal: 56px;
    --desktop-margin-vertical: 48px;
  }
  .ml-document {
    margin-left: var(--mobile-margin-horizontal);
  }
  .mr-document {
    margin-right: var(--mobile-margin-horizontal);
  }
  .mt-document {
    margin-top: var(--mobile-margin-vertical);
  }
  .mb-document {
    margin-bottom: var(--mobile-margin-vertical);
  }
  .mx-document {
    margin-left: var(--mobile-margin-horizontal);
    margin-right: var(--mobile-margin-horizontal);
  }

  @media only screen and (min-width: 1024px) {
    .ml-document {
      margin-left: var(--desktop-margin-horizontal);
    }
    .mr-document {
      margin-right: var(--desktop-margin-horizontal);
    }
    .mt-document {
      margin-top: var(--desktop-margin-vertical);
    }
    .mb-document {
      margin-bottom: var(--desktop-margin-vertical);
    }
    .mx-document {
      margin-left: var(--desktop-margin-horizontal);
      margin-right: var(--desktop-margin-horizontal);
    }

    /* teams */
    .team-scroll {
      /* width: 70vw !important; */
    }

    .team-panel-active {
      color: white;
      border-top: 1px solid #e61b2e;
      padding: 10px 0 10px 0;
      margin: 0 20px 0 0;
    }

    .team-panel-notactive {
      color: #949494;
      border-top: 1px solid transparent;
      padding: 10px 0 10px 0;
      margin: 0 20px 0 0;
    }

    .team-image {
      height: 50vh;
      object-fit: cover;
    }
  }
}

